camunda8 - v2/tasklist/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tasklist
  labels:
    app: tasklist
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tasklist
  template:
    metadata:
      labels:
        app: tasklist
    spec:
      containers:
        - name: tasklist
          image: docker.io/camunda/tasklist:8.7.13
          ports:
            - name: http
              containerPort: 8080
