camunda8 - v2/tasklist/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tasklist
  labels:
    app: tasklist
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app: tasklist
